Improved Cart related logic in particalur returning cart instead of List<items>